--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ts-node": "^9.1.1"
   },
   "scripts": {
-    "start": "ts-node --compiler ttypescript source.ts"
+    "start": "ts-node --compiler ttypescript source.ts",
+    "build": "ttsc"
   },
   "repository": {
     "type": "git",
